Fix spacing on mobile for Reservation Form

--- a/editor.css
+++ b/editor.css
@@ -1371,6 +1371,14 @@
         color: currentColor; }
       .editor-styles-wrapper .novablocks-opentable.novablocks-opentable__wide[class] .ot-dtp-picker-selector[class][class] .ot-dtp-picker-selector-link:after {
         color: currentColor; }
+  .editor-styles-wrapper .novablocks-opentable.novablocks-opentable__wide[class] .ot-dtp-picker-form:after {
+    clear: both;
+    content: "";
+    display: block; }
+  .editor-styles-wrapper .novablocks-opentable.novablocks-opentable__standard[class] {
+    padding: var(--theme-spacing-small); }
+    .editor-styles-wrapper .novablocks-opentable.novablocks-opentable__standard[class] .ot-party-size-picker {
+      margin-bottom: var(--theme-spacing-normal); }
   .editor-styles-wrapper .ot-dtp-picker-selector-link {
     text-decoration: none; }
   .editor-styles-wrapper .is-dark-mode .novablocks-opentable.novablocks-opentable__standard[class] .ot-powered-by {
