--- a/style-rtl.css
+++ b/style-rtl.css
@@ -3394,6 +3394,16 @@ span.page-numbers {
     .novablocks-opentable.novablocks-opentable__wide[class] .ot-dtp-picker-selector[class][class] .ot-dtp-picker-selector-link:after {
       color: currentColor; }
 
+.novablocks-opentable.novablocks-opentable__wide[class] .ot-dtp-picker-form:after {
+  clear: both;
+  content: "";
+  display: block; }
+
+.novablocks-opentable.novablocks-opentable__standard[class] {
+  padding: var(--theme-spacing-small); }
+  .novablocks-opentable.novablocks-opentable__standard[class] .ot-party-size-picker {
+    margin-bottom: var(--theme-spacing-normal); }
+
 .ot-dtp-picker-selector-link {
   text-decoration: none; }
 
